# CppDiplom

Finder/: CMakeLists.txt  configuration.ini  finder.cpp  index.html  main.cpp
Spider/: CMakeLists.txt  HTTPclient.cpp  HTTPclient.h  ParcerHTML.cpp  ParcerHTML.h  ParcerINI.cpp  ParcerINI.h  configuration.ini  database.cpp  database.h  indexator.cpp  main.cpp
